Code/stylesheet.css
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

body{
    margin: 0;
}

#Title{
    margin: 0; 
    height: auto;
    background-color:hsl(222, 85%, 21%);
    color:white;
    text-align: center;
}

#Title > h1{
    margin: 0;
}
nav{
    background-color: #08b4f4;
    margin-top: 0;
    height:50px;
    display: flex;
    align-items: center;
    justify-content: center;
}
nav > ul{
    list-style: none;
    margin:0;
    padding:0;
    flex-grow: 1;
    display: flex;
    justify-content: space-evenly;
}
nav > ul > li{
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: #0874c4;
    border: 2px;
    height:25px;
    width: 100px;
    border: 3px solid white;
    transition: height 0.3s ease-in-out, width 0.3s ease-in-out, background-color 0.3s ease-in-out;
}
nav > ul > li:hover{
    width: 105px;
    height: 30px;
    background-color: red;
}

aside{
    width: 100%;
}

#Description{
    height: 30%;
    border: 3px solid white;
    background-color: #0874c4;
    color: white;
}
#Values{
    height: 30%;
    border: 3px solid white;
    background-color: #0874c4;
    color: white;
}
#Founder{
    height: 30%;
    border: 3px solid white;
    background-color: #0874c4;
    color: white;
    overflow: hidden;
}
#Content{
    display: flex;
    flex-direction: column;
    background-color: black;
    justify-content: space-evenly;
    height: 700px;
}

#Product{
    display: flex;
    flex-direction: column;
    background-color: black;
    justify-content: space-evenly;
    height: 700px;
}

#Standard{
    display: flex;
    flex-direction: column;
    flex:1;
    height: 30%;
    border: 3px solid white;
    background-color: #0874c4;
    color: white;
    overflow: hidden;
}

#Message{
    display: flex;
    flex-direction: column;
    flex:1;
    height: 30%;
    border: 3px solid white;
    background-color: #0874c4;
    color: white;
    overflow: hidden;
}

#Haunting{
    display: flex;
    flex-direction: column;
    flex:1;
    height: 30%;
    border: 3px solid white;
    background-color: #0874c4;
    color: white;
    overflow: hidden;
}

img{
    max-width: 100%;
    max-height: 60%;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.Price{
    margin-top: auto;
}

